Fix typo in background image URL

--- a/CSS/france.css.css
+++ b/CSS/france.css.css
@@ -1,5 +1,5 @@
 body {
-    background: url("../IMg/ff4.jpg") center fixed ; 
+    background: url("../IMG/ff4.jpg") center fixed ; 
     background-size: cover;
 }
 .container{
