--- a/CSS/index.amrica.css
+++ b/CSS/index.amrica.css
@@ -78,6 +78,27 @@ h2 {
 .room {
     text-align: center;
     flex: 0 0 calc(33.33%);
+    position: relative;
+}
+
+.room-details {
+    position: absolute;
+    background: rgba(53, 53, 53,0.7);
+    opacity: 0;
+    z-index: 0;
+    width: 100%;
+    max-width: 100%;
+    height: 50%;
+    font-size: 2vw;
+    overflow: initial;
+}
+
+
+.room:hover .room-details {
+    top: 30%;
+    transition: opacity 1s;
+    opacity: 1;
+    z-index: 1;
 }
 
 .room-txt {
@@ -86,5 +107,19 @@ h2 {
 
 .room-txt:hover {
     color: #ec3c6a;
+    cursor: pointer;
+}
+
+button {
+    width: 100%;
+    height: 100px;
+    background-color: #cc4151;
+    color: white;
+    font-size: 2.5vw;
+}
+
+button:hover {
+    color: #cc4151;
+    background-color: white;
     cursor: pointer;
 }
